fix webkit issue (border-radius not affecting overflow: hidden;)

--- a/client-vendor/after-body/jquery.clickFeedback/jquery.clickFeedback.less
+++ b/client-vendor/after-body/jquery.clickFeedback/jquery.clickFeedback.less
@@ -1,6 +1,7 @@
 .clickFeedback {
   position: relative;
   overflow: hidden;
+  transform: translateZ(0); // fix for webkit issue https://bugs.webkit.org/show_bug.cgi?id=98538
 }
 
 .clickFeedback-ripple {
